# satclip

./: .gitignore  MODELCARD.md  README.md  SUPPORT.md  cgmanifest.json  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: version-increment.yml
figures/example_s2/: patch_33188.tif  patch_445.tif  patch_8845.tif
figures/ssl4eo/: stationDataAll.csv
figures/ssl4eo/example/: index.csv
figures/ssl4eo/example/images/: patch_252161.tif  patch_25630.tif  patch_275979.tif  patch_286743.tif  patch_322265.tif  patch_502692.tif  patch_511198.tif  patch_526850.tif  patch_566084.tif  patch_57755.tif  patch_58000.tif  patch_61808.tif  patch_70541.tif  patch_70975.tif  patch_74721.tif  patch_75123.tif  patch_752389.tif  patch_759128.tif  patch_766272.tif  patch_770287.tif
notebooks/: 00_Simple_SatCLIP_Usage.ipynb  01_Example_Air_Temperature_Prediction.ipynb  A01_Simple_SatCLIP_Usage.ipynb  A02_SatCLIP_Hugging_Face_Usage.ipynb  B01_Example_Air_Temperature_Prediction.ipynb  B02_Example_Image_Localization.ipynb  C01_Simple_CSP_Usage.ipynb  C02_Simple_GeoCLIP_Usage.ipynb  C03_Simple_GPS2Vec_Usage.ipynb  Download S2 parquet.ipynb
satclip/: .gitignore  __init__.py  load.py  load_lightweight.py  location_encoder.py  loss.py  main.py  model.py
satclip/configs/: default.yaml
satclip/datamodules/: __init__.py  s2geo_dataset.py  transforms.py
satclip/positional_encoding/: __init__.py  cartesian3d.py  common.py  direct.py  discretized_spherical_harmonics.py  grid_and_sphere.py  spherical_harmonics.py  spherical_harmonics_closed_form.py  spherical_harmonics_generate_ylms.py  spherical_harmonics_weighted.py  theory.py  wrap.py
scripts/: download_s2.py  generate_index.py
